<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/snowman2"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.dell.as2.GameOver">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <com.jetradarmobile.snowfall.SnowfallView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:snowflakeAlphaMax="255"
            app:snowflakeAlphaMin="150"
            app:snowflakeAngleMax="5"
            app:snowflakeImage="@drawable/ball"
            app:snowflakeSizeMax="32dp"
            app:snowflakeSizeMin="8dp"
            app:snowflakeSpeedMax="4"
            app:snowflakeSpeedMin="4"
            app:snowflakesAlreadyFalling="false"
            app:snowflakesFadingEnabled="true"
            app:snowflakesNum="240" />
    <TextView
        android:id="@+id/tvGameOver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/game_over"
        android:textColor="@color/light_red"
        android:textSize="50sp"
        android:textStyle="bold" />
        <EditText
            android:id="@+id/playerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:textSize="34sp"
            android:layout_marginTop="200sp"
            android:layout_gravity="center_horizontal"
            android:inputType="textCapCharacters"
            android:textColor="#264e70"/>
        <Button
            android:id="@+id/btn_enter"
            android:layout_width="120dp"
            android:layout_height="55dp"
            android:text="@string/enter"
            android:layout_marginTop="30dp"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:background="@drawable/btn_yellow"
            android:textColor="#264e70"
            />
        <TextView
            android:id="@+id/tvPlayerScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/player_score"
            android:textColor="@color/text"
            android:textSize="40sp"
            android:textStyle="bold" />
    <Button
        android:id="@+id/bt_again"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_heigh"
        android:background="@drawable/btn_red"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:text="@string/try_again"
        android:textColor="@color/text"
        android:textSize="40sp"
        android:textStyle="bold"

        />
    <Button
        android:id="@+id/bt_home"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_heigh"
        android:background="@drawable/btn_green"
        android:text="@string/home"
        android:layout_gravity="center"
        android:layout_marginTop="220dp"
        android:textColor="@color/text"
        android:textStyle="bold"
        android:textSize="40sp"
        />
    </FrameLayout>
</LinearLayout>