<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/snowman2"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".Setting">
<LinearLayout
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvMusic"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:layout_weight="1"
        android:text="@string/music_setting"
        android:textColor="@color/text"
        android:textSize="30sp"
        android:textStyle="bold" />
    <ToggleButton
        android:id="@+id/tgMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:layout_weight="1"
        android:background="#e6dedd"
        android:checked="true"
        android:textColor="@color/text"
        />
</LinearLayout>
    <TextView
        android:id="@+id/tvLanguageChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:shadowRadius="2"
        android:shadowColor="@android:color/black"
        android:shadowDx="3"
        android:shadowDy="3"
        android:text="@string/Text_change"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/btn_vi"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_heigh"
        android:background="@drawable/btn_red"
        android:textColor="@color/text"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/vietnamese"
        />

    <Button
        android:id="@+id/btn_eng"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_heigh"
        android:background="@drawable/btn_green"
        android:textColor="@color/text"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/english"
        />
    <Button
        android:id="@+id/btn_ja"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_heigh"
        android:background="@drawable/btn_yellow"
        android:textColor="@color/text"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:text="@string/Japan"
        />
    <com.shaishavgandhi.loginbuttons.GooglePlusButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:id="@+id/btnGG"
        app:iconSize="30dp"
        android:text="sign in with Google+"
        />
    <com.shaishavgandhi.loginbuttons.FacebookButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1sp"
        android:id="@+id/btnFB"
        app:iconSize="24dp"
        android:text="sign in with FaceBook"
        />
    <com.shaishavgandhi.loginbuttons.TwitterButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1sp"
        android:id="@+id/btnTW"
        app:iconSize="24dp"
        android:text="sign in with Twitter"/>


</LinearLayout>